<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ehsan.moodmeter.AboutActivity"
    android:background="#212121">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/ic_launcher"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/halnegar_dis"
            android:id="@+id/textView6"
            android:layout_margin="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" طراحی شده توسط: "
            android:id="@+id/textView7"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ehsan"
            android:id="@+id/textView8"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:autoLink="email"
            android:text="@string/ehsan_mail"
            android:id="@+id/textView9"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffffff"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sorush"
            android:id="@+id/textView10"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:autoLink="email"
            android:text="@string/sorush_mail"
            android:id="@+id/textView11"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffffff"
            android:textSize="16dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide"
            android:id="@+id/guideButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

    </LinearLayout>
</RelativeLayout>
